--- a/registration/static/css/index1.css
+++ b/registration/static/css/index1.css
@@ -17,7 +17,7 @@ header{
     height: 100vh;
     -webkit-background-size: cover;
     background-size: cover;
-    background-position: center center;
+    background-position: fixed;
     position: relative;
 }
 
@@ -53,6 +53,7 @@ h2 {
 .logo img{
     width: 100%;
     padding: 15px 0;
+    background-attachment: fixed;
 }
 .welcome-text{
     position: absolute;
