--- a/college/templates/colleges/genral.html
+++ b/college/templates/colleges/genral.html
@@ -1,13 +1,86 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
 {% block dashboard %}
 
 {% endblock%}
 
 {% block content %}
 
+<style> 
 
-<div class="container"> 
+.box-element{
+	box-shadow:hsl(0, 0%, 80%) 0 0 16px;
+	background-color: #fff;
+	border-radius: 4px;
+	padding: 10px;
+}
+
+.thumbnail{
+	width: 100%;
+	height: 200px;
+	-webkit-box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
+    -moz-box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
+    box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
+}
+
+.product{
+	border-radius: 0 0 4px 4px;
+}
+
+.bg-dark{
+	background-color: #4f868c!important;
+}
+
+#cart-icon{
+	width:25px;
+	display: inline-block;
+	margin-left: 15px;
+}
+
+#cart-total{
+	display: block;
+	text-align: center;
+	color:#fff;
+	background-color: red;
+	width: 20px;
+	height: 25px;
+	border-radius: 50%;
+	font-size: 14px;
+}
+
+.col-lg-4, .col-lg-6, .col-lg-8, .col-lg-12{
+	margin-top: 10px;
+}
+
+.btn{
+	border-radius: 0;
+}
+
+.row-image{
+	width: 100px;
+}
+</style>
+
+<div class="container">
+    <div class="row">
+        {% for coll in colleges%}
+        <div class="col-lg-4">
+            <img class="thumbnail" src="{{coll.college_pic}}" alt="{{product.name}}">
+            <div class="box-element product">
+                <h6><strong>{{coll.college}}</strong></h6>
+                <hr>
+                <a href="{% url 'dashboard' coll.id %}" class="btn btn-outline-success" >View</a>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
+
+
+
+<!-- <div class="container"> 
     <h2 class="mb-3">Colleges that we had analysed</h2>
     <div class="card-deck text-center " style="float: left;">
         {% for coll in colleges%}
@@ -21,6 +94,6 @@
         </div>
         {% endfor %}
     </div>
-</div>
+</div> -->
 
 {% endblock %}
