--- a/college/templates/colleges/genral.html
+++ b/college/templates/colleges/genral.html
@@ -64,6 +64,18 @@
 </style>
 
 <div class="container">
+
+    <form class="mr-2 my-auto w-100 d-inline-block">
+        <div class="input-group  mt-1">
+            <input type="text" class="form-control" placeholder="Search...">
+            <span class="input-group-append">
+                <button class="btn btn-outline-success ml-1" type="button">
+                    Submit
+                </button>
+            </span>
+        </div>
+    </form>
+
     <div class="row">
         {% for coll in colleges%}
         <div class="col-lg-4">
