--- a/registration/templates/base.html
+++ b/registration/templates/base.html
@@ -22,6 +22,7 @@
         <a class="navbar-brand" href="{% url 'index' %}" style="color: white; text-align: center;">
           <i class="fa fa-graduation-cap" aria-hidden="true"> Vidyarthi</i>
           </a>
+          
           <ul class="navbar-nav ml-auto">
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             {% if user.is_authenticated %}
@@ -65,9 +66,26 @@
 
             {% block logout %}
             {% endblock %}
+            </div>
           </ul>
-        </div>
+        <!-- </div> -->
       </nav>
+      {% block search %}
+      <!-- <div class="container">
+
+        <form class="mr-2 my-auto w-100 d-inline-block">
+            <div class="input-group">
+                <input type="text" class="form-control border border-right-0" placeholder="Search...">
+                <span class="input-group-append">
+                    <button class="btn btn-outline-light border border-left-0" type="button">
+                        Submit
+                    </button>
+                </span>
+            </div>
+        </form>
+      </div> -->
+      
+      {% endblock %}
       <div class="wrapper">
         {% if messages %}
             {% for message in messages %}
