--- a/college/static/css/dashboard.css
+++ b/college/static/css/dashboard.css
@@ -20,4 +20,18 @@
     font-weight: 300;
 }
 
+.iframe{
+    width: 100%;
+}
 
+.contact{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+   
+}
+.contact-form{
+    width: 100%;
+    
+}
