--- a/college/templates/colleges/dashboard.html
+++ b/college/templates/colleges/dashboard.html
@@ -120,6 +120,69 @@
   <hr>
 </div>
 
+<h2 class="heading">Contact College</h2>
+
+<div class="p-2 p-md-5 pt-5">
+  <div class="card">
+    <div class="card-body p-0">
+       <div class="row">
+        <div class="col-lg-8">
+          <iframe
+          width="100%"
+          height="500"
+          style="border:0"
+          loading="lazy"
+          allowfullscreen
+          src="https://www.google.com/maps/embed/v1/place?key=AIzaSyD2TLiALPifHWu9QDw25D1cLsSYTYrOaUk
+          &q={{map_college}}">
+          </iframe>
+        </div>
+        <div class="col-lg-4 contact">
+          <form
+            class="contact-form"
+            method="POST"
+          >
+            <div class="form-group w-100">
+              <input
+                type="name"
+                class="form-control"
+                placeholder="Name"
+                name="name"
+                required
+              />
+            </div>
+            <div class="form-group w-100">
+              <input
+                type="email"
+                class="form-control"
+                placeholder="Email"
+                name="name"
+                required
+              />
+            </div>
+
+            <div class="form-group w-100">
+              <textarea
+                class="form-control"
+                type="text"
+                placeholder="Message"
+                rows="7"
+                name="name"
+                required
+              ></textarea>
+            </div>
+
+            <button type="submit" class="btn btn-submit btn-info w-100 ">Submit</button>
+          </form>
+        </div>
+    </div>
+        </div>
+       </div> 
+    </div>
+  </div>
+  
+</div>
+
 <!-- <h2 class="heading">Write something to the college</h2> -->
 
 <!-- <div class="row p-2 p-md-5 pt-5">
