--- a/registration/templates/base.html
+++ b/registration/templates/base.html
@@ -17,6 +17,28 @@
   <title>Vidyarthi</title>
   {% endblock %}
 </head>
+
+<style>
+  footer{
+    background-color: #4e73df;
+    color: white;
+    bottom:0;
+    left:0;
+    width:100%;
+    height: 100px;
+    margin-top: 10px;
+    padding: 10px;
+}
+.details{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+
+
+</style>
 <body>
     <nav class="navbar navbar-expand navbar-light" style="background-color: #4e73df;height: 53px;">
         <a class="navbar-brand" href="{% url 'index' %}" style="color: white; text-align: center;">
@@ -35,10 +57,7 @@
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
-                  <a class="dropdown-item" href="{% url 'survey' %}">Review</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="{% url 'secondary' %}">Survey</a>
-                </div>
+                
               </li>
             {% else %}
            
@@ -70,22 +89,6 @@
           </ul>
         <!-- </div> -->
       </nav>
-      {% block search %}
-      <!-- <div class="container">
-
-        <form class="mr-2 my-auto w-100 d-inline-block">
-            <div class="input-group">
-                <input type="text" class="form-control border border-right-0" placeholder="Search...">
-                <span class="input-group-append">
-                    <button class="btn btn-outline-light border border-left-0" type="button">
-                        Submit
-                    </button>
-                </span>
-            </div>
-        </form>
-      </div> -->
-      
-      {% endblock %}
       <div class="wrapper">
         {% if messages %}
             {% for message in messages %}
@@ -93,10 +96,22 @@
             {% endfor %}
         {% endif %}
     </div>
+
     <div>
         {% block content %}
 
         {% endblock %}
     </div>
+    <footer>
+      <div class="wrapper">
+          <div class="details">
+              <h4>Vidyarthi</h4>
+              <p> Copyright &#169; 2020 Vidyarthi</p>
+          </div>
+      </div>
+  </footer>
+    
+   
+   
 </body>
 </html>
