--- a/college/templates/colleges/genral.html
+++ b/college/templates/colleges/genral.html
@@ -89,6 +89,18 @@
         </div>
         {% endfor %}
     </div>
+
+    <nav aria-label="Page navigation example justify-content-center" class="mt-3" >
+        <ul class="pagination justify-content-center">
+            {% if colleges.has_previous %}
+                <li class="page-item"><a class="page-link" href="{%url 'genral'%}?page={{colleges.previous_page_number}}">Previous</a></li>
+            {% endif %}
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            {% if colleges.has_next %}
+                <li class="page-item"><a class="page-link" href="{% url 'genral'%}?page={{colleges.next_page_number}} ">Next</a></li>
+            {% endif %}
+        </ul>
+      </nav>
 </div>
 
 
