--- a/registration/templates/pages/index.html
+++ b/registration/templates/pages/index.html
@@ -25,13 +25,17 @@
     <section class="colleges">
         <div class="container">
             <div class="row description pt-2">
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <i class="fa fa-3x fa-building-o" aria-hidden="true"></i>
                     <h1>{{count}}</h1>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <i class="fa fa-3x fa-users" aria-hidden="true"></i>
                     <h1>{{ucount}}</h1>
+                </div>
+                <div class="col-md-4">
+                    <i class="fa fa-3x fa-map-marker" aria-hidden="true"></i>
+                    <h1>3</h1>
                 </div>
             </div>
         </div>
